Helm-Chart/rancher/helm-rancher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system # 需要添加这一行
  labels:
    app: rancher
    chart: rancher-2.4.5
    heritage: Helm
    release: rancher
spec:
  type: NodePort           # 需要添加这一行
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 31031        # 需要添加这一行
  selector:
    app: rancher
